--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ logging:
     org.springframework.security: DEBUG
 
 spring:
+  main:
+      allow-circular-references: true
   datasource:
     url: jdbc:postgresql://localhost:5432/activity-db
     username: postgres
